src/minilengcompiler/minilengcompiler.java
/* Generated By:JavaCC: Do not edit this line. minilengcompiler.java */
package minilengcompiler;
import java.io.*;
import java.util.*;

public class minilengcompiler implements minilengcompilerConstants {
  static Token tk;
  static TablaHash thLex = new TablaHash();
  static TablaHash thSin = new TablaHash();
  /*
   * El nombre del fichero debe ir como ultimo parametro
   */
  public static void main(String args []) throws ParseException{
    try
    {

            int longitud = args.length;
            if(longitud == 0 || args[args.length-1].charAt(0) == '-')
            {
                //Entrada estandar                minilengcompiler parser = new minilengcompiler(System.in);
                System.out.println("Reading from standard input ...");
            }
            else
            {
                FileInputStream fis = new FileInputStream(args[longitud-1]);
                        minilengcompiler parser = new minilengcompiler(fis);
                        System.out.println("Reading from " + args[longitud-1] + " ...");
            }

              try
              {
                minilengcompiler.Programa();
                /*
	      	 * Gestion -lex_stats y -syntax-stats
	      	 */

                boolean lex_stats = false;
                boolean syntax_stats = false;
                if(longitud!=0)
                {
                                for(int i=0; i<longitud;i++)
                                {
                                        if(args[i].equals("-lex_stats"))
                                        {
                                                lex_stats = true;
                                        }
                                        if(args[i].equals("-syntax-stats"))
                                        {
                                                syntax_stats = true;
                                        }
                                }
                }
                        String clave, repeticiones;
                if(lex_stats)
                {
                                System.out.println("Analisis lexico finalizado sin errores");
                                Enumeration <String> lista = thLex.dameClaves();
                                while(lista.hasMoreElements())
                                {
                                        clave = lista.nextElement();
                                        repeticiones = thLex.leer(clave);
                                        System.out.println("Token " + clave + ": reconocido " + repeticiones + " veces");
                                }
                                System.out.println();
                }
                if(syntax_stats)
                {
                        Enumeration <String> listaSin = thSin.dameClaves();
                                System.out.println("Analisis sintactico finalizado sin errores");
                                while(listaSin.hasMoreElements())
                                {
                                        clave = listaSin.nextElement();
                                        repeticiones = thSin.leer(clave);
                                        System.out.println("Se han reconocido " + repeticiones + " " + clave);
                                }
                                System.out.println();
                }
              }
              catch (TokenMgrError e)
              {
                /*System.out.println("Oops.");	        System.out.println(e.getMessage());*/
                if(tk != null)
                {
                        System.out.println("ERROR LEXICO (" + tk.beginLine + ", " + tk.beginColumn + "): simobolo no reconocido:  " + tk.image +" ");

                }
                else
                {
                                System.out.println("ERROR LEXICO AL COMIENZO DEL PROGRAMA");
                }
              }
              catch(ParseException e)
              {
                System.out.println("ERROR SINTACTICO (" + tk.beginLine + ", " + tk.beginColumn + ")");
              }
            }catch(FileNotFoundException e){
                e.printStackTrace();
                }
  }

/*void comienzo() :{}{  (token())+< EOF >}
void token() :
{}{
  tk = <tPLUS> {thLex.insertar("plus");}
| tk = < tMINUS> {thLex.insertar("minus");}
| tk = < tMULTIPLY> {thLex.insertar("multiply");}
| tk = < tDIVIDE> {thLex.insertar("divide");}| tk = < tPROGRAMA > {thLex.insertar("programa");}
| tk = < tAND > {thLex.insertar("and");}
| tk = < tOR > {thLex.insertar("or");}
| tk = < tNOT >  {thLex.insertar("not");}
| tk = < tPRINCIPIO > {thLex.insertar("principio");}
| tk = < tFIN > {thLex.insertar("fin");}
| tk = < tSI > {thLex.insertar("si");}
| tk = < tENT > {thLex.insertar("ent");}
| tk = < tSI_NO > {thLex.insertar("sino");}
| tk = < tFSI > {thLex.insertar("fsi");}
| tk = < tMQ > {thLex.insertar("mq");}
| tk = < tFMQ > {thLex.insertar("fmq");}
| tk = < tESCRIBIR > {thLex.insertar("escribir");}
| tk = < tLEER > {thLex.insertar("leer");}
| tk = < tMOD > {thLex.insertar("mod");}
| tk = < tDIV > {thLex.insertar("div");}
| tk = < tENTERO > {thLex.insertar("entero");}
| tk = < tBOOLEANO > {thLex.insertar("booleano");}
| tk = < tCARACTER > {thLex.insertar("caracter");}
| tk = < tTRUE > {thLex.insertar("true");}
| tk = < tFALSE > {thLex.insertar("flase");}
| tk = < tENTACAR > {thLex.insertar("entacar");}
| tk = < tCARAENT > {thLex.insertar("caraent");}
| tk = < tACCION > {thLex.insertar("accion");}
| tk = < tVAL > {thLex.insertar("val");}
| tk = < tREF > {thLex.insertar("ref");}
| tk = < tMAYOR > {thLex.insertar("mayor");}
| tk = < tMENOR > {thLex.insertar("menor");}
| tk = < tIGUAL > {thLex.insertar("igual");}
| tk = < tMAI > {thLex.insertar("mai");}
| tk = < tMEI > {thLex.insertar("mei");}
| tk = < tNI > {thLex.insertar("ni");}
| tk = < tOPAS > {thLex.insertar("opas");}
| tk = < tIDENTIFICADOR > {thLex.insertar("identificador");}
| tk = < tCONST > {thLex.insertar("const");}
| tk = < tCAROCAD > {if(tk.image.length() == 3){
  thLex.insertar("letra");}else{
  thLex.insertar("cadena");}
}
| tk = < tCOMA > {thLex.insertar("coma");}
| tk = < tPUNTOYCOMA > {thLex.insertar("puntoycoma");}
| tk = < tAPAR > {thLex.insertar("apar");}
| tk = < tCPAR > {thLex.insertar("cpar");}
| tk = < tACOR > {thLex.insertar("acor");}
| tk = < tCCOR > {thLex.insertar("ccor");}}*/
  static final public void Programa() throws ParseException {
    tk = jj_consume_token(tPROGRAMA);
                    thLex.insertar("programa");
    tk = jj_consume_token(tIDENTIFICADOR);
                         thLex.insertar("identificador");
    tk = jj_consume_token(tPUNTOYCOMA);
    declaracion_variables();
    declaracion_acciones();
    bloque_sentencias();
  }

  static final public void declaracion_variables() throws ParseException {
    label_1:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case tENTERO:
      case tBOOLEANO:
      case tCARACTER:
        ;
        break;
      default:
        jj_la1[0] = jj_gen;
        break label_1;
      }
      declaracion();
      tk = jj_consume_token(tPUNTOYCOMA);
    }
  }

  static final public void declaracion() throws ParseException {
    tipo_variables();
    identificadores();
  }

  static final public void tipo_variables() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case tENTERO:
      tk = jj_consume_token(tENTERO);
                    thLex.insertar("entero");
      break;
    case tCARACTER:
      tk = jj_consume_token(tCARACTER);
                       thLex.insertar("caracter");
      break;
    case tBOOLEANO:
      tk = jj_consume_token(tBOOLEANO);
                       thLex.insertar("booleano");
      break;
    default:
      jj_la1[1] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  static final public void identificadores() throws ParseException {
    tk = jj_consume_token(tIDENTIFICADOR);
                          thLex.insertar("identificador");
                                                              thSin.insertar("variables");
    label_2:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case tCOMA:
        ;
        break;
      default:
        jj_la1[2] = jj_gen;
        break label_2;
      }
      tk = jj_consume_token(tCOMA);
      tk = jj_consume_token(tIDENTIFICADOR);
                                          thLex.insertar("identificador");
                                                                              thSin.insertar("variables");
    }
  }

  static final public void declaracion_acciones() throws ParseException {
    label_3:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case tACCION:
        ;
        break;
      default:
        jj_la1[3] = jj_gen;
        break label_3;
      }
      declaracion_accion();
    }
  }

  static final public void declaracion_accion() throws ParseException {
 thSin.insertar("funciones");
    cabecera_accion();
    tk = jj_consume_token(tPUNTOYCOMA);
    declaracion_variables();
    declaracion_acciones();
    bloque_sentencias();
  }

  static final public void cabecera_accion() throws ParseException {
    tk = jj_consume_token(tACCION);
                    thLex.insertar("accion");
    tk = jj_consume_token(tIDENTIFICADOR);
                          thLex.insertar("identificador");
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case tAPAR:
      parametros_formales();
      break;
    default:
      jj_la1[4] = jj_gen;
      ;
    }
  }

  static final public void parametros_formales() throws ParseException {
    tk = jj_consume_token(tAPAR);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case tVAL:
    case tREF:
      parametros();
      label_4:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case tPUNTOYCOMA:
          ;
          break;
        default:
          jj_la1[5] = jj_gen;
          break label_4;
        }
        tk = jj_consume_token(tPUNTOYCOMA);
        parametros();
      }
      break;
    default:
      jj_la1[6] = jj_gen;
      ;
    }
    tk = jj_consume_token(tCPAR);
  }

  static final public void lista_parametros() throws ParseException {
    tk = jj_consume_token(tIDENTIFICADOR);
                           thLex.insertar("identificador");
    label_5:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case tCOMA:
        ;
        break;
      default:
        jj_la1[7] = jj_gen;
        break label_5;
      }
      tk = jj_consume_token(tCOMA);
      tk = jj_consume_token(tIDENTIFICADOR);
                                          thLex.insertar("identificador");
    }
  }

  static final public void parametros() throws ParseException {
    clase_parametros();
    tipo_variables();
    lista_parametros();
  }

  static final public void clase_parametros() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case tVAL:
      tk = jj_consume_token(tVAL);
                 thLex.insertar("val");
      break;
    case tREF:
      tk = jj_consume_token(tREF);
                                                        thLex.insertar("ref");
      break;
    default:
      jj_la1[8] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  static final public void bloque_sentencias() throws ParseException {
    tk = jj_consume_token(tPRINCIPIO);
                       thLex.insertar("principio");
    lista_sentencias();
    tk = jj_consume_token(tFIN);
                                                                                      thLex.insertar("fin");
  }

  static final public void lista_sentencias() throws ParseException {
    label_6:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case tSI:
      case tMQ:
      case tESCRIBIR:
      case tLEER:
      case tIDENTIFICADOR:
        ;
        break;
      default:
        jj_la1[9] = jj_gen;
        break label_6;
      }
      sentencia();
    }
  }

  static final public void sentencia() throws ParseException {
 thSin.insertar("sentencias");
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case tLEER:
      leer();
      tk = jj_consume_token(tPUNTOYCOMA);
      break;
    case tESCRIBIR:
      escribir();
      tk = jj_consume_token(tPUNTOYCOMA);
      break;
    case tIDENTIFICADOR:
      asignacion_o_invocacion();
      break;
    case tSI:
      seleccion();
      break;
    case tMQ:
      mientras_que();
      break;
    default:
      jj_la1[10] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  static final public void leer() throws ParseException {
    tk = jj_consume_token(tLEER);
                thLex.insertar("leer");
    tk = jj_consume_token(tAPAR);
    lista_asignables();
    tk = jj_consume_token(tCPAR);
  }

  static final public void lista_asignables() throws ParseException {
    tk = jj_consume_token(tIDENTIFICADOR);
                           thLex.insertar("identificador");
    label_7:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case tCOMA:
        ;
        break;
      default:
        jj_la1[11] = jj_gen;
        break label_7;
      }
      tk = jj_consume_token(tCOMA);
      tk = jj_consume_token(tIDENTIFICADOR);
                                                                                                     thLex.insertar("identificador");
    }
  }

  static final public void escribir() throws ParseException {
    tk = jj_consume_token(tESCRIBIR);
                    thLex.insertar("escribir");
    tk = jj_consume_token(tAPAR);
    lista_escribibles();
    tk = jj_consume_token(tCPAR);
  }

  static final public void lista_escribibles() throws ParseException {
    factor();
    label_8:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case tCOMA:
        ;
        break;
      default:
        jj_la1[12] = jj_gen;
        break label_8;
      }
      tk = jj_consume_token(tCOMA);
      factor();
    }
  }

  static final public void asignacion_o_invocacion() throws ParseException {
    tk = jj_consume_token(tIDENTIFICADOR);
                           thLex.insertar("identificador");
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case tOPAS:
      asignacion();
      break;
    case tPUNTOYCOMA:
    case tAPAR:
      invocacion_accion();
      break;
    default:
      jj_la1[13] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  static final public void asignacion() throws ParseException {
 thSin.insertar("asignaciones");
    tk = jj_consume_token(tOPAS);
    expresion();
    tk = jj_consume_token(tPUNTOYCOMA);
  }

  static final public void invocacion_accion() throws ParseException {
 {thSin.insertar("invocaciones");}
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case tAPAR:
      argumentos();
      break;
    default:
      jj_la1[14] = jj_gen;
      ;
    }
    tk = jj_consume_token(tPUNTOYCOMA);
  }

  static final public void mientras_que() throws ParseException {
  thSin.insertar("bucles");
    tk = jj_consume_token(tMQ);
              thLex.insertar("mq");
    expresion();
    lista_sentencias();
    tk = jj_consume_token(tFMQ);
                                                                                 thLex.insertar("fmq");
  }

  static final public void seleccion() throws ParseException {
 thSin.insertar("selecciones");
    tk = jj_consume_token(tSI);
                thLex.insertar("si");
    expresion();
    tk = jj_consume_token(tENT);
                                                                  thLex.insertar("ent");
    lista_sentencias();
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case tSI_NO:
      tk = jj_consume_token(tSI_NO);
                    thLex.insertar("sino");
      lista_sentencias();
      break;
    default:
      jj_la1[15] = jj_gen;
      ;
    }
    tk = jj_consume_token(tFSI);
  }

  static final public void argumentos() throws ParseException {
    tk = jj_consume_token(tAPAR);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case tMINUS:
    case tNOT:
    case tTRUE:
    case tFALSE:
    case tENTACAR:
    case tCARAENT:
    case tIDENTIFICADOR:
    case tCONST:
    case tCAROCAD:
    case tAPAR:
      lista_expresiones();
      break;
    default:
      jj_la1[16] = jj_gen;
      ;
    }
    tk = jj_consume_token(tCPAR);
  }

  static final public void lista_expresiones() throws ParseException {
    expresion();
    label_9:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case tCOMA:
        ;
        break;
      default:
        jj_la1[17] = jj_gen;
        break label_9;
      }
      tk = jj_consume_token(tCOMA);
      expresion();
    }
  }

  static final public void expresion() throws ParseException {
 thSin.insertar("expresiones");
    expresion_simple();
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case tMAYOR:
    case tMENOR:
    case tIGUAL:
    case tMAI:
    case tMEI:
    case tNI:
      operador_relacional();
      expresion_simple();
      break;
    default:
      jj_la1[18] = jj_gen;
      ;
    }
  }

  static final public void operador_relacional() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case tMAYOR:
      tk = jj_consume_token(tMAYOR);
                  thLex.insertar("mayor");
      break;
    case tMENOR:
      tk = jj_consume_token(tMENOR);
                   thLex.insertar("menor");
      break;
    case tIGUAL:
      tk = jj_consume_token(tIGUAL);
                   thLex.insertar("igual");
      break;
    case tMAI:
      tk = jj_consume_token(tMAI);
                 thLex.insertar("mai");
      break;
    case tMEI:
      tk = jj_consume_token(tMEI);
                 thLex.insertar("mei");
      break;
    case tNI:
      tk = jj_consume_token(tNI);
                thLex.insertar("ni");
      break;
    default:
      jj_la1[19] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  static final public void expresion_simple() throws ParseException {
    termino();
    label_10:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case tPLUS:
      case tMINUS:
      case tOR:
        ;
        break;
      default:
        jj_la1[20] = jj_gen;
        break label_10;
      }
      operador_aditivo();
      termino();
    }
  }

  static final public void operador_aditivo() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case tPLUS:
      tk = jj_consume_token(tPLUS);
                  thLex.insertar("plus");
      break;
    case tMINUS:
      tk = jj_consume_token(tMINUS);
                   thLex.insertar("minus");
      break;
    case tOR:
      tk = jj_consume_token(tOR);
                thLex.insertar("or");
      break;
    default:
      jj_la1[21] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  static final public void termino() throws ParseException {
    factor();
    label_11:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case tMULTIPLY:
      case tDIVIDE:
      case tAND:
      case tMOD:
      case tDIV:
        ;
        break;
      default:
        jj_la1[22] = jj_gen;
        break label_11;
      }
      operador_multiplicativo();
      factor();
    }
  }

  static final public void operador_multiplicativo() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case tMULTIPLY:
      tk = jj_consume_token(tMULTIPLY);
                      thLex.insertar("multiply");
      break;
    case tDIVIDE:
      tk = jj_consume_token(tDIVIDE);
                    thLex.insertar("divide");
      break;
    case tDIV:
      tk = jj_consume_token(tDIV);
                 thLex.insertar("div");
      break;
    case tMOD:
      tk = jj_consume_token(tMOD);
                 thLex.insertar("mod");
      break;
    case tAND:
      tk = jj_consume_token(tAND);
                  thLex.insertar("and");
      break;
    default:
      jj_la1[23] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  static final public void factor() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case tMINUS:
      tk = jj_consume_token(tMINUS);
                   thLex.insertar("minus");
      factor();
      break;
    case tNOT:
      tk = jj_consume_token(tNOT);
               thLex.insertar("not");
      factor();
      break;
    case tAPAR:
      tk = jj_consume_token(tAPAR);
      expresion();
      tk = jj_consume_token(tCPAR);
      break;
    case tENTACAR:
      tk = jj_consume_token(tENTACAR);
                   thLex.insertar("entacar");
